--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 
 		<!-- List Data --> 
-		<div ng-controller="listCtrl as list" ng-hide="list.quizActive">
+		<div ng-controller="listCtrl as list" ng-hide="list.quizMetrics.quizActive">
 			<form class="form-inline well well-sm clearfix">
 				<span class="glyphicon glyphicon-search"></span>
 				<input type="text" placeholder="Search..." class="form-control" ng-model="list.search"/>
@@ -76,9 +76,12 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 
+		<!-- Quiz Controller -->
+		<div ng-controller="quizCtrl as quiz" ng-show="quiz.quizMetrics.quizActive">
+			<h1>Quiz</h1>
+		</div>
 	
 	</div>
 
@@ -90,5 +93,7 @@
 	<!-- App Script -->
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/controller/list.js"></script>
+	<script type="text/javascript" src="js/controller/quiz.js"></script>
+	<script type="text/javascript" src="js/factorie/quizMetrics.js"></script>
 </body>
 </html>
