--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
 		<!-- Quiz Controller -->
 		<div ng-controller="quizCtrl as quiz" ng-show="quiz.quizMetrics.quizActive">
+			<!-- Progress Area -->
 			<div class="row">
 				<div class="col-xs-8">
 					<h2>Progress:</h2>
@@ -108,7 +109,24 @@
 						</div>
 					</div>
 				</div>
-				
+			</div>
+			<!-- End of the Progress Area -->
+			
+			<div class="row">
+				<h3>Question:</h3>
+				<div class="well well-sm">
+					<div class="row">
+						<div class="col-xs-12">
+							<h4>{{ quiz.activeQuestion+1 + ". " + quiz.dataService.quizQuestions[quiz.activeQuestion].text }}</h4>
+							<div class="row">
+								<div class="col-sm-6" ng-repeat="answer in quiz.dataService.quizQuestions[quiz.activeQuestion].possibilities">
+									<h4 class="answer">{{answer.answer}}</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<button class="btn btn-warning" ng-click="quiz.questionAnswered()">Continue</button>
 			</div>
 		</div>
 	
